--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -63,6 +63,10 @@
         }
 
         .hero-sec {
+            
+        }
+
+        .background-image {
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -70,6 +74,7 @@
             background-size: cover;
             background-position: center;
             height: 100vh;
+            width: 100vw;
         }
 
         .hero-sec span {
