--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -14,18 +14,19 @@ Delete the line below if you're just getting started and want to remove the welc
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kittchens</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="./style.css">
+  <!-- link rel="stylesheet" href="./style.css" -->
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <!-- {% static "link to stati file.ext" %} -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12/lib/typed.min.js"></script>
 </head>
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock extra_css %}
 
 {% block content %}
 <body class="hero-sec">
   <nav class="bg-transparent nav-scrolled fixed top-0 left-0 right-0 z-50 flex items-center justify-between p-4">
     <div class="logo cursor-pointer">
-      <a href="#hero-sec"><img src="../../static/assets/kittchen2-logo.png"class="ml-6 " style="width: 100%;"/></a>
+      <a href="#hero-sec"><img src="{% static 'assets/kittchen2-logo.png' %}"class="ml-6 " style="width: 100%;"/></a>
     </div>
     <div class="flex items-center space-x-32">
     <ul class="links hidden md:flex space-x-6 text-gray-700">
@@ -60,37 +61,37 @@ Delete the line below if you're just getting started and want to remove the welc
         </ul>
       </div>
   </nav>
-  <section id="hero-sec" class="flex flex-col items-center justify-center w-full bg-[url('../../static/assets/hero-img.png')] bg-cover bg-center h-screen pt-52">
+  <section id="hero-sec" class="flex flex-col items-center justify-center w-full bg-[url('{% static 'assets/hero-img.png' %}')] bg-cover bg-center h-screen pt-52">
       <p class="hero-bold-txt ">Experience your kind of taste</p>
       <p class="hero-bold-txt"><span style="color: #fd0000;" id="typed-output">How</span> you want it...</p>
       <p class="hero-sub-txt pt-5">From our seasoned chefs on standby to your favorite restuarants, enjoy good deals on great meals and pasteries</p>
-      <div class="flex pt-6"><img class="mx-5" src="../../static/assets/app-buttons.png" alt="app store button">
-          <img src="../../static/assets/playstore-button.png" alt="google-play-btn">
+      <div class="flex pt-6"><img class="mx-5" src="{% static 'assets/app-buttons.png' %}" alt="app store button">
+          <img src="{% static 'assets/playstore-button.png' %}" alt="google-play-btn">
       </div>
    
   </section>
-  <section class="second-sec pt-20">
+  <section class="second-sec pt-20  justify-center w-full bg-[url('{% static 'assets/second-sec-background.jpg' %}')] bg-cover bg-center h-screen pt-52" >
       <p class="header">Download the app now!</p>
-      <img src="../../static/assets/kittchen-app.png" alt="mobile app image">
-      <img src="../../static/assets/love 1 (1).png" class="icon icon1" alt="Icon 1">
-      <img src="../../static/assets/wow 1.png" class="icon icon2" alt="Icon 2">
+      <img src="{% static 'assets/kittchen-app.png' %}" alt="mobile app image">
+      <img src="{% static 'assets/love 1 (1)' %}.png" class="icon icon1" alt="Icon 1">
+      <img src="{% static 'assets/wow 1.png' %}" class="icon icon2" alt="Icon 2">
       <div class="overlay-sec ">
           <div class="overlay-inner pt-16">
               <p id="products" class="header">Our Products/Channels</p>
               <div class=" services-block flex justify-around pt-16">
                   <div>
-                      <img src="../../static/assets/kittchen-pack.png" alt="pasteries">
+                      <img src="{% static 'assets/kittchen-pack.png' %}" alt="pasteries">
                       <h2 class="header my-3">Kittchen’s Pastries</h2>
                       <p class="paragraph">Delight your taste with the variety of our pastry offerings. Visit our roadside tuck shop and grab a healthy bite on your way to anywhere in your city.</p>
                       <a href="#">Get the app</a>
                   </div>
-                  <div><img src="../../static/assets/kittchen-gos.png" alt="kittchens pack">
+                  <div><img src="{% static 'assets/kittchen-gos.png' %}" alt="kittchens pack">
                       <h2 class="header my-3">Kittchen’s Go</h2>
                       <p class="paragraph">Deliver meals in your city and get paid for it. Join our team of savvy delivery agents on standby to help move stuff from favorite food outlets to customer doorsteps</p>
                       <a href="#">Behind A Rider</a>
                   </div>
                   <div>
-                      <img src="../../static/assets/cloud-kittchens.png" alt="cloud kittchens">
+                      <img src="{% static 'assets/cloud-kittchens.png' %}" alt="cloud kittchens">
                       <h2 class="header my-3">Cloud Kittchens</h2>
                       <p class="paragraph">Seasoned chefs use our state of the art on-site Kittchen’s to run their business. Take advantage of our exquisite locations on a plan that works for you.</p>
                       <a href="#">Book A Space</a>
@@ -98,8 +99,8 @@ Delete the line below if you're just getting started and want to remove the welc
               </div>
           </div>
           <p class="overlay-txt my-7">Tasty meals, just around the corner.</p>
-          <div class="flex pt-6"><img class="mx-5" src="../../static/assets/app-buttons.png" alt="app store button">
-              <img src="../../static/assets/playstore-button.png" alt="google-play-btn">
+          <div class="flex pt-6"><img class="mx-5" src="{% static 'assets/app-buttons.png' %}" alt="app store button">
+              <img src="{% static 'assets/playstore-button.png' %}" alt="google-play-btn">
           </div>
       </div>
   </section>
@@ -133,15 +134,15 @@ Delete the line below if you're just getting started and want to remove the welc
   <footer id="partners" class="bg-black text-white " style="padding-top: 5%; padding-bottom: 5%;">
 
       <div class="flex w-full justify-between pb-52 px-4 md:px-10 lg:px-20 space-x-4">
-          <img src="../../static/assets/walking-chips.png" class="w-full md:w-1/4">
-          <img src="../../static/assets/walking-donut.png" class="w-full md:w-1/4">
-          <img src="../../static/assets/walking-money.png" class="w-full md:w-1/4">
-          <img src="../../static/assets/walking-pepe.png" class="w-full md:w-1/4">
-          <img src="../../static/assets/walk-straw.png" class="w-full md:w-1/4">
+          <img src="{% static 'assets/walking-chips.png' %}" class="w-full md:w-1/4">
+          <img src="{% static 'assets/walking-donut.png' %}" class="w-full md:w-1/4">
+          <img src="{% static 'assets/walking-money.png' %}" class="w-full md:w-1/4">
+          <img src="{% static 'assets/walking-pepe.png' %}" class="w-full md:w-1/4">
+          <img src="{% static 'assets/walk-straw.png' %}" class="w-full md:w-1/4">
       </div>
       <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 px-6">
       <div class="first-col">
-          <img src="../../static/assets/kittchen2-logo.png" alt="Kittchens logo" class="mb-4">
+          <img src="{% static 'assets/kittchen2-logo.png' %}" alt="Kittchens logo" class="mb-4">
           <header class="text-lg font-semibold mb-2">Contact</header>
           <ul class="mb-6">
               <li>info@kittchen’s.com
@@ -150,10 +151,10 @@ Delete the line below if you're just getting started and want to remove the welc
           </ul>
           <header class="text-lg font-semibold mb-2">Socials</header>
           <div class="socials flex space-x-4">
-             <a href="#"> <img src="../../static/assets/instagram.png" alt="Instagram" class="w-6 h-6"></a>
-              <a href="#"><img src="../../static/assets/facebook.png" alt="Facebook" class="w-6 h-6"></a>
-              <a href="#"><img src="../../static/assets/twiter.png" alt="Twitter" class="w-6 h-6"></a>
-              <a href="#"><img src="../../static/assets/linkedin.png" alt="LinkedIn" class="w-6 h-6"></a>
+             <a href="#"> <img src="{% static 'assets/instagram.png' %}" alt="Instagram" class="w-6 h-6"></a>
+              <a href="#"><img src="{% static 'assets/facebook.png' %}" alt="Facebook" class="w-6 h-6"></a>
+              <a href="#"><img src="{% static 'assets/twiter.png' %}" alt="Twitter" class="w-6 h-6"></a>
+              <a href="#"><img src="{% static 'assets/linkedin.png' %}" alt="LinkedIn" class="w-6 h-6"></a>
           </div>
           <div class="copyright-block pt-5">
               <hr class="section-line">
