visible logo love

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -106,7 +106,7 @@ Delete the line below if you're just getting started and want to remove the welc
         <span style="color: #fd0000" id="typed-output"></span> you want it...
       </p>
       <p class="hero-sub-txt pt-5">
-        From our seasoned chefs on standby to your favorite restuarants, enjoy
+        From our seasoned chefs on standby to your favorite restaurants, enjoy
         good deals on great meals and pasteries
       </p>
       <div class="flex pt-6">
@@ -122,8 +122,8 @@ Delete the line below if you're just getting started and want to remove the welc
     <section class="second-sec pt-20">
       <p class="header">Download the app now!</p>
       <img src="{% static 'assets/kittchen-app.png' %}" alt="mobile app image">
-      <img src="{% static 'assets/love 1 (1)' %}.png" class="icon icon1" alt="Icon 1">
-      <img src="{% static 'assets/wow 1.png' %}" class="icon icon2" alt="Icon 2">
+      <img src="{% static 'assets/love-love.png' %}" class="icon icon1" alt="Icon 1">
+      <img src="{% static 'assets/wow-wow.png' %}" class="icon icon2" alt="Icon 2">
       <div class="overlay-sec">
         <div class="overlay-inner pt-16 pb-20">
           <p id="products" class="header">Our Products/Channels</p>
