--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -147,7 +147,7 @@ Delete the line below if you're just getting started and want to remove the welc
                 favorite food outlets to customer doorsteps
               </p>
               <h2 class="" style="text-align: left">
-                <a href="#">Behind A Rider</a>
+                <a href="#">Become A Rider</a>
               </h2>
             </div>
             <div>
@@ -176,10 +176,10 @@ Delete the line below if you're just getting started and want to remove the welc
       </div>
     </section>
     <div style="height: 50vh"></div>
-    <section class="third-sec bg-black w-full" style="height: 100vh">
+    <section class="third-sec bg-black w-full " style="height: 100vh ">
       <section
         style="background: #fd0000"
-        class="faq flex rounded-lg w-11/12 mx-auto p-6 space-x-6"
+        class="faq flex rounded-lg w-11/12 mx-auto p-6 space-x-6 mt-[-150px] h-[700px]"
       >
         <div class="faq-list w-1/3 space-y-4">
           <header class="text-xl font-bold text-white mb-4">You asked.</header>
