fix the typing lading page

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -144,7 +144,7 @@ Delete the line below if you're just getting started and want to remove the welc
               <p class="paragraph">
                 Deliver meals in your city and get paid for it. Join our team of
                 savvy delivery agents on standby to help move stuff from
-                favorite food outlets to customer doorsteps
+                favorite food outlets to customer doorsteps.
               </p>
               <h2 class="" style="text-align: left">
                 <a href="#">Become A Rider</a>
@@ -248,13 +248,17 @@ Delete the line below if you're just getting started and want to remove the welc
           </ul>
         </div>
 
-        <div class="faq-response-container">
+
+        <div class="faq-response-container relative">
           <div class="faq-response-content">
             <h2 class="text-5xl font-bold mb-4" style="color: #fd0000">
               We replied:
             </h2>
           </div>
+          <img class="absolute bottom-0 right-0 pl-2 -mb-[-3] -mr-[-3]" src="{% static 'assets/love-icon.png' %}" alt="Love Icon" />
         </div>
+        
+        
       </section>
     </section>
 
@@ -340,8 +344,7 @@ Delete the line below if you're just getting started and want to remove the welc
           <header class="text-lg font-semibold mb-2">Partners</header>
           <ul class="space-y-2">
             <li><a href="#" class="hover:text-gray-300">Aidi Venture</a></li>
-            <li><a href="#" class="hover:text-gray-300">TAJBANK</a></li>
-            <li><a href="#" class="hover:text-gray-300">Megadel Africa</a></li>
+            <li><a href="#" class="hover:text-gray-300">Megadel Farms</a></li>
             <li>
               <a href="#" class="hover:text-gray-300"
                 >SpeedMeals Culinary School</a
